# BoncaRobot

./: .gitignore  Cargo.toml  README.md  boncarobot.template.toml  boncarobot.toml  rustfmt.toml
plugin-libs/aarena/: Cargo.toml
plugin-libs/aarena/src/: lib.rs  parse.rs
plugin-libs/http-request-common/: Cargo.toml
plugin-libs/http-request-common/src/: lib.rs
plugin-libs/titlefetch/: Cargo.toml
plugin-libs/titlefetch/src/: lib.rs
pluginapi/: Cargo.toml
pluginapi/src/: lib.rs
plugins/asspull_arena/: Cargo.toml
plugins/asspull_arena/src/: lib.rs
plugins/bostonlang/: Cargo.toml
plugins/bostonlang/src/: lib.rs
plugins/crypto/: Cargo.toml
plugins/crypto/src/: lib.rs
plugins/isolang/: Cargo.toml
plugins/isolang/src/: lib.rs
plugins/linktitle/: Cargo.toml
plugins/linktitle/src/: lib.rs
plugins/permut/: Cargo.toml
plugins/permut/src/: lib.rs
plugins/rc/: Cargo.toml
plugins/rc/src/: lib.rs
plugins/search/: Cargo.toml
plugins/search/src/: lib.rs
plugins/searchfix/: Cargo.toml
plugins/searchfix/src/: lib.rs
plugins/shift/: Cargo.toml
plugins/shift/src/: lib.rs
plugins/tell/: Cargo.toml
plugins/tell/src/: lib.rs
plugins/template/: Cargo.toml
plugins/template/src/: lib.rs
plugins/ud/: Cargo.toml
plugins/ud/src/: lib.rs
plugins/w/: Cargo.toml
plugins/w/src/: lib.rs
src/: boncactl_server.rs  config.rs  core.rs  ipc_control.rs  listener.rs  main.rs  optparse.rs  plugin_api.rs  plugin_container.rs  plugin_hosting.rs  shift.rs  util.rs
