[package]
name = "boncarobot"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]

[dependencies]
hiirc = "0.4.0"
toml = "0.4.1"
libloading = "0.4"
zmq = "0.8.2"
rustyline = "1.0.0"
downcast-rs = "1.0.0"
serde = "1.0.8"
serde_derive = "1.0.8"

[workspace]
members = ["plugins/*"]

[lib]
name = "plugin_api"
path = "src/plugin_api.rs"

[profile.release]
panic = "abort"
