[package]
name = "boncarobot"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]

[dependencies]
hiirc = "0.5.0"
toml = "0.4.1"
libloading = "0.4"
rustyline = "1.0.0"
downcast-rs = "1.0.0"
serde = "1.0.8"
serde_derive = "1.0.8"
scaproust = "0.3.1"
distance = "0.4.0"

[dependencies.split-whitespace-rest]
git = "https://github.com/crumblingstatue/split-whitespace-rest"

[workspace]
members = ["plugins/*"]

[lib]
name = "plugin_api"
path = "src/plugin_api.rs"
