[package]
name = "cryptoplugin" # For some reason `crypto` breaks ld
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]

[dependencies]
json = "0.11.13"

[dependencies.boncarobot]
path = "../.."
default-features = false

[dependencies.http-request-common]
path = "../../plugin-libs/http-request-common"

[lib]
crate-type = ["cdylib"]
