[package]
name = "linktitle"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]

[dependencies]
regex = "1.0.5"
lazy_static = "1.1.0"

[dependencies.titlefetch]
path = "../../plugin-libs/titlefetch"

[dependencies.boncarobot]
path ="../../"
default-features = false

[lib]
crate-type = ["cdylib"]
