[package]
name = "search"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]

[dependencies]
hyper = "*"
scraper = "*"
url = "*"

[dependencies.boncarobot]
path ="../../"

[lib]
name = "search"
crate-type = ["dylib"]
# This is important, makes it so that the lib is compiled with
# rustc -C prefer-dynamic, which is required for
# things like freeing something in the host that was allocated
# in the plugin
plugin = true
