[package]
name = "search"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]

[dependencies]
scraper = "*"
url = "*"

[dependencies.http-request-common]
path = "../../plugin-libs/http-request-common"

[dependencies.boncarobot]
path ="../../"
default-features = false

[lib]
crate-type = ["dylib"]
# This is important, makes it so that the lib is compiled with
# rustc -C prefer-dynamic, which is required for
# things like freeing something in the host that was allocated
# in the plugin
plugin = true
