[package]
name = "search"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]

[dependencies]
scraper = "0.7.0"
url = "1.7.1"

[dependencies.http-request-common]
path = "../../plugin-libs/http-request-common"

[dependencies.boncarobot]
path ="../../"
default-features = false

[dependencies.titlefetch]
path = "../../plugin-libs/titlefetch"

[lib]
crate-type = ["cdylib"]
