[package]
name = "shift"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]

[lib]
name = "shift"
crate-type = ["dylib"]
# This is important, makes it so that the lib is compiled with
# rustc -C prefer-dynamic, which is required for
# things like freeing something in the host that was allocated
# in the plugin
plugin = true

[dependencies.boncarobot]
path = "../.."
