[package]
name = "ud"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]

[dependencies]
json = "0.11.13"

[dependencies.http-request-common]
path = "../../plugin-libs/http-request-common"

[dependencies.boncarobot]
path ="../../"
default-features = false

[dependencies.split-whitespace-rest]
git = "https://github.com/crumblingstatue/split-whitespace-rest"

[lib]
crate-type = ["cdylib"]
