[package]
name = "w"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]

[dependencies]
json = "0.11.13"

[dependencies.http-request-common]
path = "../../plugin-libs/http-request-common"

[dependencies.boncarobot]
path = "../../"
default-features = false

[lib]
crate-type = ["cdylib"]
